# KNN-Algorithm-Project

./: CLI.cpp  CLI.h  CMakeLists.txt  KNN.cpp  KNN.h  Makefile  README.md  client.cpp  client.h  server.cpp  server.h
Command/: AlgorithmSettings.cpp  ClassifyData.cpp  Command.h  DisplayResults.cpp  DownloadResults.cpp  Exit.cpp  UploadFile.cpp
DefaultIO/: DefaultIO.h  SocketIO.cpp  StandardIO.cpp
Distance/: CanberraDistance.cpp  ChebyshevDistance.cpp  Distance.h  EuclideanDistance.cpp  ManhattenDistance.cpp  MinkowskiDistance.cpp
